Init with non-template content, and updated ionic in bower.json. Might take out www/lib from git next time.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "simple-login",
-  "version": "1.0.0",
-  "description": "simple-login: An Ionic project",
+  "name": "bettertutors-web-frontend",
+  "version": "0.2.0",
+  "description": "Frontend using Ionic (Angular+Cordova+UI), integrating with bettertutors backend",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^0.7.1",
